--- a/app.json
+++ b/app.json
@@ -4,12 +4,15 @@
     "slug": "Calculator",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/cat_icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true
+    },
+    "splash": {
+        "image": "./assets/images/cat_splash.png"
     },
     "android": {
       "adaptiveIcon": {
